[package]
name = "pyro-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.glyph]
git = "https://github.com/YoEight/glyph.git"
branch = "master"

[dependencies.pyro-runtime]
path = "../pyro-runtime"

[dependencies.pyro-core]
path = "../pyro-core"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4.3"
features = ["derive"]

[dependencies]
eyre = "0.6"
directories = "5"
